# Compile-Benchmark

./: .gitignore  Cargo.toml  DEPENDENCIES.md  README.md  benchmark-config.cfg  benchmark-results.json  benchmark.ps1  benchmark.sh  fast-benchmark-results.json  fast-benchmark-results.txt  fast_benchmark.ps1  fast_benchmark.sh  test-sysinfo.ps1  test-sysinfo.sh
.cargo/: config.toml
src/: api.rs  auth.rs  cache.rs  config.rs  database.rs  error.rs  handlers.rs  main.rs  middleware.rs  models.rs  services.rs  templates.rs  utils.rs
src/handlers/: analytics.rs  auth.rs  export.rs  health.rs  orders.rs  posts.rs  products.rs  search.rs  upload.rs  users.rs
src/models/: analytics.rs  common.rs  order.rs  post.rs  product.rs  user.rs
src/services/: email_service.rs  external_api_service.rs  notification_service.rs  order_service.rs  payment_service.rs  post_service.rs  product_service.rs  user_service.rs
src/templates/: base.html
