[package]
name = "compile-benchmark"
version = "0.1.0"
edition = "2021"
description = "A realistic web service for compile-time benchmarking"

[dependencies]
# Async runtime - heavy compile time
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }

# Serialization - very common, lots of proc macros
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls", "cookies", "gzip", "brotli"] }

# Database (compile-time checked queries - no mysql to avoid native lib deps)
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "postgres", "chrono", "uuid"] }

# CLI parsing with derive macros
clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Password hashing
argon2 = "0.5"

# JWT tokens
jsonwebtoken = "9"

# Configuration
config = "0.14"

# Error handling
thiserror = "1"
anyhow = "1"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Regex
regex = "1"

# Templating
tera = "1"

# Caching
moka = { version = "0.12", features = ["future"] }

# Rate limiting
governor = "0.6"

# Metrics
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Random generation
rand = "0.8"

# Base64
base64 = "0.21"

# URL parsing
url = "2"
urlencoding = "2"

# Derive more traits
derive_more = "0.99"

# Builder pattern
typed-builder = "0.18"

# Additional heavy dependencies for compile time (pure Rust, cross-platform)
# Web frameworks (multiple to stress compile)
actix-web = { version = "4", features = ["compress-gzip", "compress-brotli"] }
actix-rt = "2"
rocket = { version = "0.5", features = ["json", "uuid"] }
warp = "0.3"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

# Additional pure-Rust CPU-intensive crates (replacing AWS SDK which has idle linking time)
# More web/API frameworks
poem = { version = "2", features = ["embed", "compression", "cookie"] }
salvo = { version = "0.65", features = ["jwt-auth", "compression"] }
tide = "0.16"

# More derive-heavy crates
derive_builder = "0.20"
getset = "0.1"
smart-default = "0.7"
educe = "0.5"
shrinkwraprs = "0.3"

# More serialization with proc-macros
schemars = { version = "0.8", features = ["chrono", "uuid1"] }
speedy = "0.8"
rkyv = { version = "0.7", features = ["validation", "strict"] }
borsh = { version = "1", features = ["derive"] }

# Crypto crates (pure Rust, CPU-bound)
sha2 = "0.10"
sha3 = "0.10"
blake2 = "0.10"
blake3 = "1"
ed25519-dalek = "2"
x25519-dalek = "2"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"

# Math/computation
nalgebra = "0.32"
ndarray = "0.15"
num = "0.4"
rust_decimal = "1"
bigdecimal = "0.4"

# Parser generators (proc-macro heavy)
syn = { version = "2", features = ["full", "parsing", "printing", "visit", "visit-mut", "fold", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
darling = { version = "0.20", features = ["suggestions"] }

# Additional heavy crates to reach 1.5-2 min compile time
# More database/ORM crates (SQLite only - no native deps needed)
diesel = { version = "2", features = ["sqlite", "chrono", "uuid", "r2d2"] }
diesel_migrations = "2"

# More pure Rust heavy crates (stable versions only)
# Scientific computing (no ML crates with rand conflicts)
statrs = "0.16"
peroxide = "0.34"
rulinalg = "0.4"
mathru = "0.13"

# More heavy derive/proc-macro crates
diesel_derives = "2"
sea-orm-macros = "0.12"
serde_with = { version = "3", features = ["chrono", "json"] }
enum-assoc = "1"
enum-map = "2"
enumflags2 = "0.7"
bitfield = "0.17"

# More heavy pure-rust crates (no native deps)
zstd = "0.13"
brotli = "6"
lzma-rs = "0.3"
weezl = "0.1"
miniz_oxide = "0.7"

# More web frameworks (stable versions only)
viz = "0.8"
gotham = "0.7"
thruster = "1"

# Blockchain/crypto
ethers = "2"
web3 = "0.19"

# Game/simulation
bevy_ecs = "0.13"
specs = "0.20"
legion = "0.4"
hecs = "0.10"

# More parsing
chumsky = "0.9"
lalrpop-util = "0.20"
peg = "0.8"

# Network
tarpc = { version = "0.34", features = ["tokio1", "serde-transport"] }
capnp = "0.19"
capnp-rpc = "0.19"

# Additional serialization
flexbuffers = "2"
prost-types = "0.12"

# More async runtimes/utilities  
smol = "2"
async-std = { version = "1", features = ["attributes"] }
pollster = "0.3"
blocking = "1"

# More HTTP/web
ureq = { version = "2", features = ["json", "charset", "cookies", "gzip", "brotli"] }
attohttpc = { version = "0.28", features = ["json", "compress"] }
isahc = { version = "1", features = ["json", "cookies", "text-decoding"] }
surf = "2"

# Text processing
pulldown-cmark = "0.10"
comrak = { version = "0.21", features = ["shortcodes", "syntect"] }
syntect = "5"
tree-sitter = "0.22"

# More crypto
k256 = { version = "0.13", features = ["ecdsa", "schnorr"] }
p256 = { version = "0.13", features = ["ecdsa"] }
p384 = { version = "0.13", features = ["ecdsa"] }
rsa = "0.9"
dsa = "0.6"

# PDF/document processing
printpdf = "0.7"
lopdf = "0.32"

# Audio
rodio = { version = "0.18", default-features = false, features = ["wav", "mp3"] }
symphonia = { version = "0.5", features = ["all-codecs"] }

# GUI/graphics (no native deps, pure compute)
tiny-skia = "0.11"
resvg = "0.40"
usvg = "0.40"
fontdb = "0.16"

# More template engines
liquid = "0.26"
upon = "0.8"
markup = "0.15"

# Additional compute-heavy
rayon = "1"
crossbeam = "0.8"
dashmap = "5"
flume = "0.11"
kanal = "0.1"

# More validation/schema
garde = { version = "0.18", features = ["derive", "full"] }
nutype = { version = "0.4", features = ["serde"] }

# Time/scheduling
cron = "0.12"
job_scheduler = "1"
chrono-tz = "0.9"

# Network protocols
rumqttc = "0.24"
lapin = "2"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Code generation heavy
prost-build = "0.12"
tonic-build = "0.11"

# gRPC
tonic = { version = "0.11", features = ["gzip", "zstd"] }
prost = "0.12"

# GraphQL
async-graphql = { version = "7", features = ["chrono", "uuid", "dataloader"] }
async-graphql-axum = "7"
juniper = "0.16"

# Database ORMs
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }

# Image processing
image = "0.24"

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "hostname", "pool", "smtp-transport"] }

# Template engines
handlebars = "5"
askama = "0.12"
minijinja = "1"

# Spreadsheets/data
calamine = "0.24"
rust_xlsxwriter = "0.64"
csv = "1"

# XML
quick-xml = "0.31"
xml-rs = "0.8"

# Observability
prometheus = { version = "0.13", features = ["process"] }
opentelemetry = { version = "0.22", features = ["metrics", "trace"] }
tracing-opentelemetry = "0.23"
sentry = "0.32"

# Chat/bot frameworks
serenity = { version = "0.12", features = ["client", "gateway", "model"] }
octocrab = "0.34"

# Crypto/security
ring = "0.17"
rustls = "0.22"
webpki-roots = "0.26"

# Compression (pure Rust only)
flate2 = "1"
lz4_flex = "0.11"
snap = "1"

# Data formats
rmp-serde = "1"
bincode = "1"
postcard = { version = "1", features = ["alloc"] }
ciborium = "0.2"

# CLI and TUI
indicatif = "0.17"
dialoguer = "0.11"
console = "0.15"
colored = "2"

# Additional serialization
ron = "0.8"
toml_edit = "0.22"

# HTTP/networking extras
trust-dns-resolver = "0.23"
hickory-resolver = "0.24"

# Parsing
nom = "7"
pest = "2"
pest_derive = "2"
logos = "0.14"
winnow = "0.6"

# Async extras
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures-lite = "2"

# State machines
enum-iterator = "1"
strum = { version = "0.26", features = ["derive"] }
num_enum = "0.7"

# Error handling extras
color-eyre = "0.6"
miette = { version = "7", features = ["fancy"] }
eyre = "0.6"

# Logging extras
fern = "0.6"
log4rs = "1"
env_logger = "0.11"

# Testing/mocking in main deps for compile time
proptest = "1"
quickcheck = "1"
arbitrary = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
fake = { version = "2", features = ["derive"] }
mockall = "0.12"
tokio-test = "0.4"
wiremock = "0.5"

[profile.dev]
# Don't optimize in dev for faster incremental builds
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
